samples/_failures_safe/1761788908_b41f24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b59cbe45.c: In function ‘main’:
./samples/SAFE/__tmp_b59cbe45.c:169:5: error: expected expression at end of input
  169 |     for (
      |     ^~~
./samples/SAFE/__tmp_b59cbe45.c:169:5: error: expected declaration or statement at end of input
